# template-repo-python

./: .detect-secrets-ignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  LICENSE.md  MANIFEST.in  NOTICE.txt  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/: CODEOWNERS  README.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/ISSUE_TEMPLATE_example/: -bug_report.yml.template  -feature_request.yml.template  -vulnerability-issue.yml.template
.github/workflows/: branch-cicd.yaml  codeql-analysis.yml  description.yaml  publish.yml.example  secrets-detection.yaml  sonarcloud.yaml  stable-cicd.yaml  terraform_cicd.yaml  unstable-cicd.yaml
docs/: wiki-detect-secrets.md
docs/requirements/v1.1.0-dev/: REQUIREMENTS.md
docs/requirements/v8.0.1-dev/: REQUIREMENTS.md
docs/source/: conf.py  index.rst
docs/source/support/: contact.rst  contribute.rst
my_pds_module/: __init__.py
scripts/: detect_secrets_baseline.sh
src/pds/: __init__.py
src/pds/my_pds_module/: __init__.py  _version.py
src/pds/your_package_name/: __init__.py  main.py
terraform/: main.tf  variables.tf
tests/pds/my_pds_module/: test_example.py
tests/pds/your_package_name/: test_example.py
