[test]

[install]

[versioneer]
VCS                = git
style              = pep440-post
tag_prefix         = v
versionfile_source = src/pds/my_pds_module/_version.py
versionfile_build  = pds/my_pds_module/_version.py
parentdir_prefix   = pds.my_pds_module-


# For future consideration:
#
# - Move declarative metadata out of `setup.py` and into here
# - Add `[options]` for zip-safe use, package metadata
# - Both `requirements.txt` and `install_requires` violates DRY but I'm out of time
