[metadata]
name = your_package_name
author = PDS
author_email = pds_operator@jpl.nasa.gov
description = A short description, about 100-120 characters, suitable for search summaries
long_description = file: README.md
license = apache-2.0
keywords = pds, planetary data, various, other, keywords
url = https://github.com/NASA-PDS/<TODO: complete URL>
download_url = https://github.com/NASA-PDS/<TODO: complete URL>/releases/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent


[options]
#install_requires =
    # Put your requirements here
zip_safe = True
include_package_data = True
namespace_packages = pds
# base directory for code is in src/. Don't change this.
package_dir =
    = src
packages = find:
python_requires = >= 3.6

[options.extras_require]
dev =
    sphinx
    sphinx-rtd-theme

[options.entry_points]
# Put your entry point scripts here
#console_scripts =
    # some_script: ...

[options.packages.find]
# Don't change this. Needed to find packages under src/
where=src

[test]

[install]

[versioneer]
VCS                = git
style              = pep440
tag_prefix         = v
versionfile_source = src/pds/my_pds_module/_version.py
versionfile_build  = pds/my_pds_module/_version.py
parentdir_prefix   = pds.my_pds_module-
