[metadata]
name = your_package_name
author = PDS
author_email = pds_operator@jpl.nasa.gov
description = A short description, about 100-120 characters, suitable for search summaries
long_description = file: README.md
license = apache-2.0
keywords = pds, planetary data, various, other, keywords
url = https://github.com/NASA-PDS/<TODO: complete URL>
download_url = https://github.com/NASA-PDS/<TODO: complete URL>/releases/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent


[options]
#install_requires =
    # Put your requirements here
zip_safe = True
include_package_data = True
namespace_packages = pds
# base directory for code is in src/. Don't change this.
package_dir =
    = src
packages = find:
python_requires = >= 3.6

[options.extras_require]
dev =
    black
    flake8
    flake8-bugbear
    flake8-docstrings
    pep8-naming
    mypy
    pydocstyle
    coverage
    pytest
    pytest-cov
    pytest-watch
    pytest-xdist
    pre-commit
    sphinx
    sphinx-rtd-theme
    tox

[options.entry_points]
# Put your entry point scripts here
#console_scripts =
    # some_script: ...

[options.packages.find]
# Don't change this. Needed to find packages under src/
where=src

[coverage:run]
omit = */_version.py,*/__init__.py


[test]

[tool:pytest]
addopts = -n auto --cov=pds

[install]

[flake8]
max-line-length = 120
extend-exclude = versioneer.py,_version.py,docs,tests,setup.py
docstring_convention = google

# Ignoring:
# E203 prevents flake8 from complaining about whitespace around slice
# components. Black formats per PEP8 and flake8 doesn't like some of
# this.
#
# E501 prevents flake8 from complaining line lengths > 79. We will use
# flake8-bugbear's B950 to handle line length lint errors. This trips
# when a line is > max-line-length + 10%.
extend-ignore = E203, E501

# Selects following test categories:
# D: Docstring errors and warnings
# E, W: PEP8 errors and warnings
# F: PyFlakes codes
# N: PEP8 Naming plugin codes
# B: flake8-bugbear codes
# B***: Specific flake8-bugbear opinionated warnings to trigger
#   B902: Invalid first argument used for method. Use self for instance
#       methods, and cls for class methods
#   B903: Use collections.namedtuple (or typing.NamedTuple) for data classes
#       that only set attributes in an __init__ method, and do nothing else.
#   B950: Line too long. This is a pragmatic equivalent of pycodestyle's
#       E501: it considers "max-line-length" but only triggers when the value
#       has been exceeded by more than 10%.
select = D,E,F,N,W,B,B902,B903,B950

[mypy]

[mypy-pds.*._version]
# We don't care about issues in versioneer's files
ignore_errors = True

[versioneer]
VCS                = git
style              = pep440
tag_prefix         = v
versionfile_source = src/pds/my_pds_module/_version.py
versionfile_build  = pds/my_pds_module/_version.py
parentdir_prefix   = pds.my_pds_module-
